--- a/adocoes/adocoes.css
+++ b/adocoes/adocoes.css
@@ -15,6 +15,7 @@ header {
     display: flex;
     text-align: center;
     flex-direction: column;
+     padding-top: 100px;    
 }
 
 .disponiveis {
@@ -39,8 +40,12 @@ header {
 .dupla_cards a{
 text-decoration: none;
 color: black;
+ transition: transform 0.3s ease;
 }
 
+.dupla_cards a:hover{
+    transform: scale(1.1);
+}
 
 /*CARD*/
 .card {
