--- a/doacoes/doacoes.css
+++ b/doacoes/doacoes.css
@@ -10,6 +10,7 @@ body {
 h1{
     text-align: center;
     padding: 40px;
+     padding-top: 90px;
 }
 
 .cards {
@@ -21,12 +22,20 @@ h1{
 }
 
 .card a {
-    background-color: white;
+   border-style: solid;
+   border-width: 1px;
     display: flex;
     border-radius: 20px;
     color: black;
     text-decoration: none;
     padding: 20px;
+      transition: 0.3s;
+}
+.card a:hover {
+    background-color: #f35b23;
+    color: white;
+     transition: 0.3s;
+   
 }
 
 .cards .infos{
